--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
   color: #222;
   background: #f1f5f8;
 }
@@ -23,4 +22,21 @@ body {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+.book {
+    background: #fff;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+}
+
+.book h1 {
+    margin-top: 0.5rem;
+}
+
+.book h4 {
+    color: #617d98;
+    letter-spacing: 4px;
+    font-size: 0.75rem;
+    margin-top: 0.25rem;
 }
